trying to create a Foreach

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,80 @@
+<!DOCTYPE html>
+<head>
+  <meta charset='UTF-8'>
+  <title>Tic Tac Toe</title>
+</head>
+<body>
+  <div id="app">
+    <h1>Tic Tac Toe</h1>
+    <hr>
+    <button id="clear-btn">Clear Table</button>
+    <table>
 
+      <thead>
+        <th></th>
+        <th></th>
+        <th>1</th>
+        <th>|</th>
+        <th>2</th>
+        <th>|</th>
+        <th>3</th>
+      </thead>
+      <tr>
+        <td></td>
+        <td></td>
+        <td>----</td>
+        <td></td>
+        <td>----</td>
+        <td></td>
+        <td>----</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td></td>
+        <td class="space">X</td>
+        <td>|</td>
+        <td class="space">O</td>
+        <td>|</td>
+        <td class="space">X</td>
+      </tr>
 
+      <tr>
+        <td></td>
+        <td></td>
+        <td>----</td>
+        <td></td>
+        <td>----</td>
+        <td></td>
+        <td>----</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td></td>
+        <td class="space">O</td>
+        <td>|</td>
+        <td class="space">X</td>
+        <td>|</td>
+        <td class="space">X</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td>----</td>
+        <td></td>
+        <td>----</td>
+        <td></td>
+        <td>----</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td></td>
+        <td class="space">X</td>
+        <td>|</td>
+        <td class="space">O</td>
+        <td>|</td>
+        <td class="space">X</td>
+      </tr>
+    </table>
+  </div>
+  <script src='app.js'></script>
+</body>
