finished tic tac toe

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -28,14 +28,14 @@
         <td></td>
         <td>----</td>
       </tr>
-      <tr>
+      <tr class="row" id="row-1">
         <td>1</td>
         <td></td>
-        <td class="space">X</td>
+        <td class="space col1">X</td>
         <td>|</td>
-        <td class="space">O</td>
+        <td class="space col2">O</td>
         <td>|</td>
-        <td class="space">X</td>
+        <td class="space col3">X</td>
       </tr>
 
       <tr>
@@ -47,14 +47,14 @@
         <td></td>
         <td>----</td>
       </tr>
-      <tr>
+      <tr class="row" id="row-2">
         <td>2</td>
         <td></td>
-        <td class="space">O</td>
+        <td class="space col1">O</td>
         <td>|</td>
-        <td class="space">X</td>
+        <td class="space col2">X</td>
         <td>|</td>
-        <td class="space">X</td>
+        <td class="space col3">X</td>
       </tr>
       <tr>
         <td></td>
@@ -65,14 +65,14 @@
         <td></td>
         <td>----</td>
       </tr>
-      <tr>
+      <tr class="row" id="row-3">
         <td>3</td>
         <td></td>
-        <td class="space">X</td>
+        <td class="space col1">X</td>
         <td>|</td>
-        <td class="space">O</td>
+        <td class="space col2">O</td>
         <td>|</td>
-        <td class="space">X</td>
+        <td class="space col3">X</td>
       </tr>
     </table>
   </div>
