--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script> -->
-  <script src="react.development.js"></script>
-  <script src="react-dom.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  <!-- <script src="react.development.js"></script>
+  <script src="react-dom.development.js"></script> -->
   <title>Challenge 3</title>
 </head>
 
 <body>
   <div id="app">hi</div>
 
-  <script type="module" src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
