--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -7,6 +7,7 @@
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
   <!-- <script src="react.development.js"></script>
   <script src="react-dom.development.js"></script> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/light.min.css">
   <title>Challenge 3</title>
 </head>
 
