--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -15,6 +15,7 @@
   <div id="app">hi</div>
 
   <script src="app.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 
 </html>
